Update Webapplication UI

--- a/LRWebapplication/views/head.pug
+++ b/LRWebapplication/views/head.pug
@@ -1,5 +1,5 @@
-square(
-  height="50px"
-  width="50px"
-  background-color="red"
-)
+doctype html 
+html
+  head
+    link(rel="stylesheet", href="style/style.css")
+    meta(name="color-scheme" content="dark light")
