--- a/LRWebapplication/views/index.pug
+++ b/LRWebapplication/views/index.pug
@@ -1,22 +1,13 @@
 include head.pug
 
-doctype html 
-html
-  head
-
-    style
-      include style.css
-    meta(name="color-scheme" content="dark light")
-
-h1   Title
+.topNavigation
+  h1.navigationHeader Information
 
 div
-  p(id="") Auftragsnummer
-  div
-    input.anrinput(type="text", name="auftragsnr", placeholder="Auftragsnummer eingeben")
-    button.squarebutton(id="indus") Search
-    input(id="myButton" type="button", value="table" onclick="generate_table()")
-    p(id="demo" onclick="myFunction()") Click me.
-    script(type="text/javascript" src="script.js")
-
-    
+  .auftragSearch
+    form(action="javascript:generate_table()" ) 
+      input.searchField(type="text", name="auftragsnr", placeholder="Auftragsnummer" required)
+      input.searchField(type="text", name="usertoken", placeholder="E-Mail" required)
+      input.searchField(type="text", name="postleitzahl", placeholder="PLZ" required)
+      input.squarebutton(type="submit" value="Suchen" id="search")
+script(type="text/javascript" src="javascript/script.js")
