--- a/LRWebapplication/public/style/style.css
+++ b/LRWebapplication/public/style/style.css
@@ -60,7 +60,8 @@ body {
 
 
 .squarebutton {
-    background-color: #66FCF1;
+/*    background-color: #66FCF1;*/
+background-color: #45A29E;
     border-width: 0;
     border-radius: 5px;
     height: 34px;
@@ -84,7 +85,7 @@ body {
 
 .auftragSearch {
     background-color: #1F2833;
-    height: 4rem;
+    height: 10rem;
     width: max-content;
     padding: 10px;
     margin: auto;
@@ -92,6 +93,7 @@ body {
     align-items: center;
     display: flex;
     justify-content: center;
+    border-radius: 0px 0px 20px 20px;
 }
 
 .searchField {
