--- a/LRWebapplication/public/style/style.css
+++ b/LRWebapplication/public/style/style.css
@@ -67,7 +67,7 @@ background-color: #45A29E;
     height: 34px;
     color: #0B0C10;
     font-weight: bold;
-    margin-left: 3px;
+    margin-left: 15px;
     padding: 5px;
     transition: 0.3s;
 }
@@ -104,6 +104,7 @@ background-color: #45A29E;
     margin: 5px;
     padding-left: 5px;
     outline: none;
+    box-shadow: 5px 5px 5px #0B0C10;
 }
 
 
