--- a/LRWebapplication/views/index.pug
+++ b/LRWebapplication/views/index.pug
@@ -5,9 +5,9 @@ include head.pug
 
 div
   .auftragSearch
-    form(action="javascript:generate_table()" ) 
+    form(action="javascript:generate_table()")
       input.searchField(type="text", name="auftragsnr", placeholder="Auftragsnummer" required)
-      input.searchField(type="text", name="usertoken", placeholder="E-Mail" required)
-      input.searchField(type="text", name="postleitzahl", placeholder="PLZ" required)
+      input.searchField(type="text", name="status", placeholder="Status")
+      input.searchField(type="text", name="postleitzahl", placeholder="PLZ")
       input.squarebutton(type="submit" value="Suchen" id="search")
 script(type="text/javascript" src="javascript/script.js")
