--- a/LRWebapplication/views/index.pug
+++ b/LRWebapplication/views/index.pug
@@ -5,7 +5,7 @@ include head.pug
 
 div
   .auftragSearch
-    form(action="javascript:generate_table()")
+    form(action="javascript:getData()")
       input.searchField(type="text", name="auftragsnr", placeholder="Auftragsnummer" required)
       input.searchField(type="text", name="status", placeholder="Status")
       input.searchField(type="text", name="postleitzahl", placeholder="PLZ")
