--- a/LRWebapplication/views/index.pug
+++ b/LRWebapplication/views/index.pug
@@ -5,9 +5,10 @@ include head.pug
 
 div
   .auftragSearch
-    form(action="javascript:getDataGet()")
-      input.searchField(type="text", name="auftragsnr", placeholder="Auftragsnummer" required)
-      input.searchField(type="text", name="status", placeholder="Status")
-      input.searchField(type="text", name="postleitzahl", placeholder="PLZ")
+    form(action="javascript:getOrders(id,pId,pAnz,status)")
+      input.searchField(id="id",type="text", name="auftragsnr", placeholder="Auftragsnummer" required)
+      input.searchField(id="pId",type="text", name="postleitzahl", placeholder="Produkt Id")
+      input.searchField(id="pAnz",type="text", name="postleitzahl", placeholder="Produkt Anzahl")
+      input.searchField(id="status",type="text", name="status", placeholder="Status")
       input.squarebutton(type="submit" value="Suchen" id="search")
 script(type="text/javascript" src="javascript/script.js")
