--- a/LRWebapplication/public/style/style.css
+++ b/LRWebapplication/public/style/style.css
@@ -87,7 +87,6 @@ background-color: #45A29E;
 .auftragSearch {
     background-color: #1F2833;
     height: 10rem;
-    width: max-content;
     padding: 10px;
     margin: auto;
     width: 55%;
@@ -113,17 +112,61 @@ background-color: #45A29E;
     border-bottom: 2px solid #45A29E;
 }
 
-#datatable {
-    margin: 5px;
-    background-color: #1F2833;
-    border-color: #0B0C10;
+.space {
+    margin: 20px    ;
 }
 
-#datatable > th,td {
-    padding: 10px;
+.styled-table {
+    margin: auto;
+    width: 55%;
+    justify-content: center;
+    border-collapse: collapse;
+    font-family: sans-serif;
+    box-shadow: 0 0 20px rgba(0, 152, 121, 0.3);
+    border-radius: 10px;
 }
 
-th {
-    font-weight: bold;
-    font-size: large;
+.styled-table thead tr {
+    background-color: red;
+    color: #ffffff;
+    text-align: left;
+}
+
+.styled-table th,
+.styled-table td {
+    padding: 12px 15px;
+}
+
+.styled-table tbody tr {
+    border-bottom: 1px solid #0B0C10;
+}
+
+.styled-table tbody tr:nth-child(even) {
+    background-color: #f3f3f3;
+}
+
+.styled-table tbody tr:last-of-type {
+    border-bottom: 2px solid #45A29E;
+}
+
+.styled-table tr:active th {
+    background: #1F2833;
+    color: #45A29E;
+}
+
+#loader {
+    visibility: hidden;
+    justify-content: center;
+    margin: auto;
+    border: 16px solid #f3f3f3; /* Light grey */
+    border-top: 16px solid #45A29E; /* Blue */
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
 }
