--- a/LRWebapplication/views/index.pug
+++ b/LRWebapplication/views/index.pug
@@ -11,4 +11,6 @@ div
       input.searchField(id="pAnz",type="text", name="postleitzahl", placeholder="Produkt Anzahl")
       input.searchField(id="status",type="text", name="status", placeholder="Status")
       input.squarebutton(type="submit" value="Suchen" id="search")
+  .space
+  #loader
 script(type="text/javascript" src="javascript/script.js")
