--- a/LRWebapplication/public/style/style.css
+++ b/LRWebapplication/public/style/style.css
@@ -43,7 +43,7 @@ abbr,acronym { border:0;}
 
 body {
     background-color: #0B0C10;
-}
+    }
 
 .topNavigation {
     background-color: #45A29E;
@@ -54,6 +54,7 @@ body {
 }
 
 .navigationHeader {
+    color: #f3f3f3;
     display: inline-block;
     font-weight: bold;
     font-size: 1.8rem;
@@ -98,6 +99,7 @@ background-color: #45A29E;
 
 .searchField {
     background-color: #1F2833;
+    color: lightgray;
     border-width: 2px;
     border-color: transparent;
     height: 35px;
@@ -109,25 +111,22 @@ background-color: #45A29E;
 
 
 .searchField:focus {
-    border-bottom: 2px solid #45A29E;
+    box-shadow: 5px 5px 5px #45A29E;
 }
 
 .space {
-    margin: 20px    ;
+    height: 50px;
 }
 
 .styled-table {
+    color: #f3f3f3;
     margin: auto;
     width: 55%;
     justify-content: center;
     border-collapse: collapse;
     font-family: sans-serif;
-    box-shadow: 0 0 20px rgba(0, 152, 121, 0.3);
+    box-shadow: 0 0 30px rgba(0, 152, 121, 0.7);
     border-radius: 10px;
-}
-
-.styled-table tr:nth-of-type(odd){
-    background-color: red;
 }
 
 .styled-table th,
@@ -141,31 +140,20 @@ background-color: #45A29E;
 }
 
 .styled-table tbody tr:nth-child(even) {
-    background-color: #f3f3f3;
+    background-color: #121418;
 }
 
 .styled-table tbody tr:last-of-type {
-    border-bottom: 2px solid #45A29E;
+    border-bottom: 4px solid #45A29E;
 }
 
-.styled-table tr:active th {
+.styled-table tbody tr:active {
     background: #1F2833;
     color: #45A29E;
+    transform: scale(1.05, 1.05);
 }
 
-#loader {
-    visibility: hidden;
-    justify-content: center;
-    margin: auto;
-    border: 16px solid #f3f3f3; /* Light grey */
-    border-top: 16px solid #45A29E; /* Blue */
-    border-radius: 50%;
-    width: 30px;
-    height: 30px;
-    animation: spin 1s linear infinite;
-}
-
-@keyframes spin {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
+.styled-table tbody tr:hover {
+    background: #1F2833;
+    color: #45A29E;
 }
