--- a/LRWebapplication/views/index.pug
+++ b/LRWebapplication/views/index.pug
@@ -10,7 +10,7 @@ div
       input.searchField(id="pId",type="text", name="postleitzahl", placeholder="Produkt Id")
       input.searchField(id="pAnz",type="text", name="postleitzahl", placeholder="Produkt Anzahl")
       input.searchField(id="status",type="text", name="status", placeholder="Status")
-      input.squareButton(type="submit" value="Suchen" id="search")
+      input.squareButton(type="submit" value="🔎︎" id="search")
   .space
 
 script(type="text/javascript" src="javascript/script.js")
