feat: add title to html-header

--- a/LRWebapplication/views/head.pug
+++ b/LRWebapplication/views/head.pug
@@ -1,5 +1,6 @@
 doctype html 
 html
   head
+    title Leitrechner - info
     link(rel="stylesheet", href="style/style.css")
     meta(name="color-scheme" content="dark light")
